# eqr-scoping

./: .gitignore  .pre-commit-config.yaml  README.md  dbt_project.yml  profiles.yml  pyproject.toml  transform_all.sh
docs/: ferc-cid-listing-2024-08-01.csv  ferc-cid-listing-2025-06-10.csv  ferc-cid-listing-2025-08-01.csv
models/: cleaned_contracts.sql  cleaned_contracts.yml  cleaned_transactions.sql  cleaned_transactions.yml  ident.sql  index_pub.sql  sources.yml
sql/: contracts.sql  ferc_cid.sql  ferc_company_identifiers.sql  ident.sql  indexPub.sql  index_pub.sql  transactions.sql
src/eqr_scoping/: settings.py  utils.py
src/eqr_scoping/defs/: dbt.py  extract.py  resources.py
src/eqr_scoping/sql/: custom_transaction_types.sql
