[project]
name = "eqr-scoping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.11.3",
    "dagster-dbt>=0.27.3",
    "dagster-dg-cli>=1.11.3",
    "dagster-postgres>=0.27.3",
    "dagster-webserver>=1.11.3",
    "dbt-duckdb>=1.9.4",
    "duckdb>=1.3.2",
    "fsspec>=2025.7.0",
    "gcsfs>=2025.7.0",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "universal-pathlib>=0.2.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "eqr_scoping"
registry_modules = [
    "eqr_scoping.components.*",
]
